--- a/main.css
+++ b/main.css
@@ -121,6 +121,11 @@ Main
 	margin: 0 auto;
 }
 
+.main .mission-statement img {
+	height: auto;
+	width: 100%;
+}
+
 .main h1 {
 	
 }
@@ -150,6 +155,67 @@ Main
 	background:#CCC;
 	cursor: pointer;
 }
+
+/*
+Artists
+*/
+
+.artists .artist {
+	max-width: 250px;
+	margin: 0 8% 0 0;
+	height: auto;
+	display: inline-block;
+	text-align: center;
+}
+
+.artists .artist .photo-link {
+	margin: 0 0 0 0;
+}
+
+.artists .artist .photo-link img {
+	max-width: 250px;
+	border: 5px solid #a3030f;
+}
+
+.artists .artist .band-links {
+	padding: 0;
+	margin-top: 5px;
+	text-align: center;
+}
+
+.artists .artist .band-links li {
+	display: inline-block;
+	margin: 0 5px 0 0;
+}
+
+.artists .artist .band-links .fb {
+	height: 35px;
+	width: 35px;
+	background-image: url("imgs/social/facebook-square.png");
+	background-size: 35px 35px;
+}
+
+.artists .artist .band-links .twitter {
+	height: 35px;
+	width: 35px;
+	background-image: url("imgs/social/twitter.png");
+	background-size: 35px 35px;
+}
+
+.artists .artist .band-links .ig {
+	height: 35px;
+	width: 35px;
+	background-image: url("imgs/social/instagram.png");
+	background-size: 35px 35px;
+}
+
+.artists .artist .band-links .site {
+	height: 35px;
+	width: 35px;
+	background-image: url("imgs/social/website.png");
+	background-size: 35px 35px;
+}
+
 
 /*
 Footer
