--- a/main.css
+++ b/main.css
@@ -66,6 +66,7 @@
 .content {
 	width:100%;
 	font-family: 'Lato', Arial, sans-serif;
+	font-weight: 400;
 }
 
 /*
@@ -127,7 +128,11 @@ Main
 }
 
 .main h1 {
-	
+	font-weight: 700;
+	margin: 0.5em 0 0.3em 0;
+	padding: 10px;
+	background: #000;
+	color: #fff;
 }
 
 .main p {
