--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,14 @@
 	a:hover {
 		color:#ccc;
 	}
+	
+	nav {
+		display: none;
+	}
 
+	.header {
+		display: none;
+	}
 
 .content {
 	width:100%;
@@ -266,24 +273,70 @@ CSS media query for ios and android phones
 @media only screen 
   and (min-device-width: 0px) 
   and (max-device-width: 736px) {
-	.sidenav {
+
+	body {
+	    overflow-x: hidden;
+	}
+	
+	nav {
+		display: block;
+	}
+
+	nav:not(.mm-menu) {
 		display: none;
 	}
 
-	body {
+	.header {
+		display: block;
+		position: fixed;
 		text-align: center;
+		width: 100%;
+		padding: 2% 0 2% 0;
+		font-size: 1.5em;
+		background: #fff;
 	}
+
+	.header.fixed
+	{
+		position: fixed;
+		top: 0;
+		left: 0;
+	}
+
+	.header a
+	{
+		background: center center no-repeat;
+		background-image: url( data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABkAAAAZCAYAAADE6YVjAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAADhJREFUeNpi/P//PwOtARMDHQBdLGFBYtMq3BiHT3DRPU4YR4NrNAmPJuHRJDyahEeT8Ii3BCDAAF0WBj5Er5idAAAAAElFTkSuQmCC );
+		background-color: #000;
+
+		display: block;
+		width: 40px;
+		height: 40px;
+		padding-right: 5px;
+		position: absolute;
+		top: 0;
+	}
+
+	.sidenav {
+		display: none;
+	}	
 
 	.main {
-		max-width: 99%;
+		max-width: 100%;
 		margin-left: 0;
-		padding-left: 5px;
-		padding-right: 5px;
-		text-align: center;
 	}
 
-	.main p {
+	.btn a {
+		padding: 1em;
+	}
+
+	.mission-statement {
+		padding-top: 40px;
+		padding-bottom: 20px;
+	}
+
+	.enter {
 		text-align: center;
-	}	
+	}
 }
 
