--- a/css/main.css
+++ b/css/main.css
@@ -291,8 +291,9 @@ CSS media query for ios and android phones
 		position: fixed;
 		text-align: center;
 		width: 100%;
-		padding: 2% 0 2% 0;
+		padding: 8px 0 8px 0;
 		font-size: 1.5em;
+		font-weight: 700;
 		background: #fff;
 	}
 
