--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
 		margin:0;
 		padding:0 0 0 0;
 		line-height: 1;
-		background:#fff;
+		background:transparent;
 	}
 	ol, ul {
 		list-style: none;
@@ -99,7 +99,11 @@ h1 {
 	padding: 10px;
 	background: #000;
 	color: #fff;
+	background-image: url(../imgs/img-h1bg.png);
+	background-repeat: no-repeat;
+	background-position: right;
 }
+
 
 tr:nth-child(even) {
 	background: #eee;
@@ -111,8 +115,11 @@ sidenav
 
 .sidenav {
 	max-width: 250px;
-	margin: 20px 0 0 30px;
+	height: 100%;
+	padding: 20px 30px 20px 30px;
 	position: fixed;
+	background: rgba(0, 0, 0, .8);
+	z-index: 2;
 }
 
 .sidenav .logo {
@@ -120,7 +127,6 @@ sidenav
 }
 
 .sidenav .nav {
-	height: 100%;
 	margin-top: 40px;
 	margin-bottom: 40px;
 	padding: 0;
@@ -138,7 +144,16 @@ sidenav
 	font-weight: 700;
 }
 
-.sidenav .nav-footer .social img {
+.sidenav .nav li a {
+	color: #fff;
+}
+
+.sidenav .social {
+	margin: 10px 0 0 0;
+	display: block;
+}
+
+.sidenav .social img {
 	max-width: 50px;
 	height: auto;
 }
@@ -148,14 +163,57 @@ Main
 */
 
 .main {
-	max-width: 600px;
-	margin: 0 0 0 290px;
-	padding-bottom: 60px;
+	margin: 0 0 0 0;
 	display: inline-block;
 }
 
+.main .mission-img {
+	display: none;
+}
+
+.main .mission-header {
+	height:100%;
+	background: url(../imgs/pic-home.jpg) no-repeat left fixed; 
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	font-size: 300%;
+	text-align: center;
+	position: relative;
+}
+
+.main .mission-header .logo {
+	position: relative;
+	top: 45%;
+	transform: translateY(-45%);
+}
+
+.main .mission-header .logo img{
+	max-height: 15%;
+	max-width: 15%;
+}
+
+.main .top-break {
+	width: 100%;
+	height: 150px;
+	background: url(../imgs/img-top-border.png) no-repeat;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	background-color: transparent;
+	position: absolute;
+	bottom: 0;
+}
+
 .main .mission-statement {
-	margin: 0 auto;
+	margin: 0 0 0 235px;
+	padding-top: 60px;
+	padding-bottom: 60px;
+	padding-left: 30px;
+	padding-right: 30px;
+	background: #fff;
 }
 
 .main img {
@@ -165,7 +223,8 @@ Main
 
 .main p {
 	text-align: left;
-	line-height: 30px;
+	line-height: 2em;
+	font-size: 1.5em;
 }
 
 .main .enter {
@@ -275,6 +334,7 @@ CSS media query for ios and android phones
 
 	body {
 	    overflow-x: hidden;
+	    background-position: 0px 0px;
 	}
 	
 	nav {
@@ -304,8 +364,26 @@ CSS media query for ios and android phones
 		background: #fff;
 	}
 
-	.header.fixed
-	{
+	.mission-header {
+		display: none;
+	}
+
+	.main .mission-img {
+		display: block;
+		width: 100%;
+		height: auto;
+	}
+
+	.main .mission-img img {
+		width: 100%;
+		height: auto;
+	}
+
+	.main .mission-statement {
+		margin: 0;
+	}
+
+	.header.fixed {
 		position: fixed;
 		top: 0;
 		left: 0;
@@ -353,7 +431,7 @@ CSS media query for ios and android phones
 		text-align: center;
 	}
 
-	/*Artist overrides*/
+	/*Artist overrides
 
 	.artists .artist {
 		width: 100%;
@@ -369,6 +447,7 @@ CSS media query for ios and android phones
 
 	.main {
 		width: 100%;
+		padding-left: 0px;
 	}
 
 	/*Band Template overrides*/
@@ -376,5 +455,5 @@ CSS media query for ios and android phones
 	.back-button {
 		display: none;
 	}
-}
+}*/
 
